--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset = "Utf-8"/>
 	<title>Portfolio</title>
+	<link rel="stylesheet" type="text/css" href="css/portfolio.css"/>
 </head>
 
 <body>
