--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset = "Utf-8"/>
 	<title>CV</title>
-	<link rel="stylesheet" type="text/css" href="cv.css"/>
+	<link rel="stylesheet" type="text/css" href="css/resume.css"/>
 </head>
 
 <body>
