Major update : index, portfolio

--- a/index.html
+++ b/index.html
@@ -8,12 +8,43 @@
 </head>
 
 <body>
-Index page (soon)
-<br>
-<a href="resume.html">Resume</a>
-<br>
-<a href="portfolio.html">portfolio</a>
 
+	<section id="resume">
+		<a href="resume.html">
+			<div class="container">
+				<div class="img"><img src="img/resume.png"/></div>
+				<div class="label">My resume ( CV )</div>
+			</div>
+		</a>
+	</section>
+	
+	<section id="portfolio">
+		<a href="portfolio.html">
+			<div class="container">
+				<div class="img"><img src="img/portfolio.png"/></div>
+				<div class="label">My portfolio</div>
+			</div>
+		</a>
+	</section>
+	
+	<section id="linkedin">
+		<a href="https://www.linkedin.com/in/maletfrancois">
+			<div class="container">
+				<div class="img"><img src="img/linkedin_logo.png"/></div>
+				<div class="label">My linkedin profile</div>
+			</div>
+		</a>
+	</section>
+	
+	<section id="github">
+		<a href="https://github.com/exentro">
+			<div class="container">
+				<div class="img"><img src="img/github.png"/></div>
+				<div class="label">My github profile</div>
+			</div>
+		</a>
+	</section>
+	
 </body>
 
 </html>
