--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,63 @@
 </head>
 
 <body>
-Awsome portfolio (soon) !
+	<section id="trajectonav">
+	
+		<h2>TrajectoNav</h2>
+		<div class="video">
+			
+		</div>
+		
+		<div class="context">
+			Project I worked @ Fishing Cactus (between october 2018 to june 2019).
+			<br>
+			This is an barge boats simulator developped for navigability studies (inland navigation) in partnership with a specialized engineering company (DN&T).
+			<br>
+			The Unity part is built on top a DN&T DLL wich calculate the ship position and rotation according the inputs over time by the Unity layer. Being the only programmer assigned to that project I actually took care of almost all aspects of the programmation side of the project, such as (non exhaustive list) :
+			<ul>
+				<li>Architecture design and implementation</li>
+				<li>Input Handling (commands) and DLL responses impact</li>
+				<li>Third-parties plugins (Weather Maker Pro, Rewired, River Auto Material, ...)</li>
+				<li>User graphical interfaces (GUI)</li>
+			</ul>	
+		</div>
+			
+		<div class="links">
+			I don't have any ownership over the code so I can't share any piece of code or build.
+		</div>
+		
+	</section>
+	
+	<section id="mouseinthehouse">
+	
+		<h2>Mouse In the House</h2>
+		<div class="video">
+			<iframe src="https://player.vimeo.com/video/267637834" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+			<div class="videosource">
+				<a href="https://vimeo.com/267637834">Trailer "Mouse In The House"</a> from <a href="https://vimeo.com/user84635833">TJ</a> on <a href="https://vimeo.com">Vimeo</a>.
+			</div>
+		</div>
+		
+		<div class="context">
+			Project done in 6 weeks (from concept to release) in a team of 5 as the final part of the 6 months (between oct. 30, 2017 and apr 30, 2018) Unity training.
+			<br>
+			I worked as full time programmer, mainly on the mice code such as :
+			<ul>
+				<li>Mice actions (move, jump, climb, push, pull, duck, pushback)</li>
+				<li>Mice collisions & environment detection</li>
+				<li>Mice internal state machine</li>
+				<li>Mice animation state machine, transitions, integration & tweaks (using Unity Mecanim)</li>
+				<li>Final scene scripting</li>
+			</ul>
+		</div>
+		
+		<div class="links">
+			The code is available here : <a href="https://github.com/exentro/mouseinthehouse">https://github.com/exentro/mouseinthehouse</a>
+			<br>
+			The game build can be downloaded here : <a href="https://triturus.itch.io/mouse-in-the-house"> https://triturus.itch.io/mouse-in-the-house</a>
+		</div>
+		
+	</section>
 
 </body>
 
