--- a/resume.html
+++ b/resume.html
@@ -316,7 +316,7 @@
 			<div><img src="img/info.png"/><span>Belgian, Birth 1987</span></div>
 			<div><img src="img/tick.png"/><span>Driver License (B)</span></div>
 			<div><img src="img/mail.png"/><span>francois@malet.be</span></div>
-			<div><img src="img/linkedin_logo.png"/><span>ca.linkedin.com/in/maletfrancois</span></div>
+			<div><img src="img/linkedin_logo.png"/><span><a href="https://www.linkedin.com/in/maletfrancois">linkedin.com/in/maletfrancois</a></span></div>
 			<br>
 			<div class="oneLine"><span>More about me : <a href="https://exentro.github.io/">https://exentro.github.io/</a></span></div>
 		</section>
