Add trajecto video

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,11 +12,17 @@
 	
 		<h2>TrajectoNav</h2>
 		<div class="video">
-			
+			<video width="640" height="360" controls>
+				<source src="vid/trajecto.mp4" type="video/mp4">
+				Your browser does not support the HTML video tag.
+			</video> 			
+			<div class="videocomment">
+				Low quality video taken with the in-game video capture (RockVr)
+			</div>
 		</div>
 		
 		<div class="context">
-			Project I worked @ Fishing Cactus (between october 2018 to june 2019).
+			Project I worked on @ Fishing Cactus (between october 2018 to june 2019).
 			<br>
 			This is an barge boats simulator developped for navigability studies (inland navigation) in partnership with a specialized engineering company (DN&T).
 			<br>
@@ -24,13 +30,15 @@
 			<ul>
 				<li>Architecture design and implementation</li>
 				<li>Input Handling (commands) and DLL responses impact</li>
-				<li>Third-parties plugins (Weather Maker Pro, Rewired, River Auto Material, ...)</li>
-				<li>User graphical interfaces (GUI)</li>
+				<li>Third-parties plugins (Weather Maker Pro, Rewired, RockVR, River Auto Material, ...)</li>
+				<li>User graphical interfaces (GUI) & 2d map</li>
+				<li>Simulation and replay modes</li>
+				<li>Multiples camera point of views</li>
 			</ul>	
 		</div>
 			
 		<div class="links">
-			I don't have any ownership over the code so I can't share any piece of code or build.
+			I don't have any ownership over the code nor the project so I can't share any code/build.
 		</div>
 		
 	</section>
@@ -40,7 +48,7 @@
 		<h2>Mouse In the House</h2>
 		<div class="video">
 			<iframe src="https://player.vimeo.com/video/267637834" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-			<div class="videosource">
+			<div class="videocomment">
 				<a href="https://vimeo.com/267637834">Trailer "Mouse In The House"</a> from <a href="https://vimeo.com/user84635833">TJ</a> on <a href="https://vimeo.com">Vimeo</a>.
 			</div>
 		</div>
